--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "off",
     "react/jsx-filename-extension": [
       1,
       {
